# browser

./: browser.trace  pyproject.toml
server/: comment.css  comment.js  event-loop.js  main.py
src/: a11y.py  browser.py  chrome.py  composite.py  constants.py  css_parser.py  draw_command.py  frame.py  html_parser.py  js_engine.py  layout.py  main.py  measure.py  node.py  protected_field.py  screen_reader.py  tab.py  task.py  url.py  utils.py
src/default/: browser.css  runtime.js
test/: index.html  script.js  style.css
